不要な警告を抑止する

--- a/charma/.rubocop.yml
+++ b/charma/.rubocop.yml
@@ -63,3 +63,9 @@ Style/FormatString:
 
 Layout/SpaceAfterNot:
   Enabled: false
+
+Layout/AlignHash:
+  Enabled: false
+
+Layout/AlignParameters:
+  Enabled: false
